[gd_scene load_steps=11 format=3 uid="uid://lel5gbr3ud7j"]

[ext_resource type="Script" uid="uid://burack5c3yfhf" path="res://level_objects/exits/exit.gd" id="1_ksl1k"]
[ext_resource type="Script" uid="uid://ccmurvcjf28h4" path="res://features/player_detector.gd" id="2_8bfr7"]
[ext_resource type="Script" uid="uid://c5j7amvm22631" path="res://features/objective_node.gd" id="3_ir32i"]
[ext_resource type="Shader" uid="uid://cqad4h58wq06s" path="res://level_objects/exits/exit.gdshader" id="4_8bfr7"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8bfr7"]
radius = 2.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0injr"]
resource_local_to_scene = true
no_depth_test = true
shading_mode = 0
billboard_mode = 1

[sub_resource type="PrismMesh" id="PrismMesh_v58vd"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_0injr")
size = Vector3(1, -1, 0.2)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ir32i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ir32i"]
render_priority = 0
shader = ExtResource("4_8bfr7")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_ir32i")
shader_parameter/root_color = Color(1, 1, 1, 1)
shader_parameter/tip_color = Color(0.307205, 0.948507, 0.323973, 1)
shader_parameter/fire_alpha = 1.0
shader_parameter/fire_speed = Vector2(0.5, 0.4)
shader_parameter/fire_aperture = 0.166

[sub_resource type="CylinderMesh" id="CylinderMesh_ksl1k"]
lightmap_size_hint = Vector2i(80, 34)
material = SubResource("ShaderMaterial_ir32i")
flip_faces = true
top_radius = 3.0
bottom_radius = 2.5
height = 1.0
cap_top = false
cap_bottom = false

[node name="Exit" type="Node3D"]
script = ExtResource("1_ksl1k")

[node name="PlayerDetector" type="Area3D" parent="."]
script = ExtResource("2_8bfr7")
metadata/_custom_type_script = "uid://ccmurvcjf28h4"

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetector"]
shape = SubResource("CylinderShape3D_8bfr7")

[node name="ObjectiveNode" type="Node" parent="."]
script = ExtResource("3_ir32i")
metadata/_custom_type_script = "uid://c5j7amvm22631"

[node name="Highlight" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, -1.50996e-07, 3.82139e-15, 1.50996e-07, -1, 8.74228e-08, -9.37908e-15, 8.74228e-08, 1, 0, 1.3368, 0)
mesh = SubResource("PrismMesh_v58vd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.482038, 0)
mesh = SubResource("CylinderMesh_ksl1k")

[connection signal="player_entered" from="PlayerDetector" to="." method="_on_player_detector_player_entered"]
[connection signal="player_exited" from="PlayerDetector" to="." method="_on_player_detector_player_exited"]
